# code

./: Cargo.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.jsonc
.changes/: android-compileroptions-dsl.md  bundle-vc-runtime.md  cargo-toml-1.md  change-pr-15578.md  dpi-type-wrappers.md  fix-js-listeners-leak-on-webview-close.md  fix-objc-retain-leak.md  fix-wix-resource-target-name.md  no-redirection-bitmap-config.md  no-redirection-bitmap.md  runtime-wry-avoid-clones.md  wait-async-window-creation.md
.github/workflows/: audit.yml  check-change-tags.yml  check-license-header.yml  covector-status.yml  docker.yml  fmt.yml  test-cli-js.yml  test-cli-rs.yml  test-core.yml  udeps.yml
.scripts/ci/: prepare-cli-cef-publish.js
apps/app/: Cargo.toml  build.rs  package.json  tauri.conf.json
apps/app-frontend/: vite.config.ts
apps/app-frontend/src/: App.vue
apps/app-frontend/src/pages/: Browse.vue
apps/app-frontend/src/store/: theme.ts
apps/app/capabilities/: core.json
apps/app/src/: main.rs
bench/tests/files_transfer/src-tauri/: Cargo.toml
bench/tests/helloworld/src-tauri/: Cargo.toml
crates/tauri/: Cargo.toml
crates/tauri-build/: Cargo.toml
crates/tauri-build/src/: acl.rs
crates/tauri-bundler/: README.md
crates/tauri-bundler/src/: bundle.rs  error.rs  lib.rs
crates/tauri-bundler/src/bundle/: settings.rs
crates/tauri-cli/: Cargo.toml  config.schema.json
crates/tauri-cli/src/: bundle.rs  icon.rs  lib.rs
crates/tauri-cli/src/dev/: builtin_dev_server.rs
crates/tauri-cli/src/helpers/: flock.rs  prompts.rs  updater_signature.rs
crates/tauri-cli/src/info/: plugins.rs
crates/tauri-cli/src/interface/: mod.rs  rust.rs
crates/tauri-codegen/: Cargo.toml
crates/tauri-codegen/src/: embedded_assets.rs
crates/tauri-driver/: Cargo.toml
crates/tauri-macos-sign/: Cargo.toml
crates/tauri-macros/src/command/: handler.rs
crates/tauri-plugin/: Cargo.toml
crates/tauri-runtime-cef/: Cargo.toml
crates/tauri-runtime-cef/src/: lib.rs  runtime.rs  webview.rs
crates/tauri-runtime-cef/src/cef_impl/: request_context.rs  request_handler.rs
crates/tauri-runtime-cef/src/cef_impl/client/: life_span.rs  load.rs
crates/tauri-runtime-cef/src/external_message_pump/: linux.rs
crates/tauri-runtime-cef/src/platform/macos/: dock.rs  event_loop.rs
crates/tauri-runtime-wry/: Cargo.toml
crates/tauri-runtime-wry/src/dialog/: windows.rs
crates/tauri-runtime-wry/src/window/: mod.rs
crates/tauri-runtime/src/: lib.rs
crates/tauri-utils/: Cargo.toml
crates/tauri-utils/src/: build.rs  config.rs  html.rs  platform.rs
crates/tauri-utils/src/acl/: build.rs  identifier.rs  manifest.rs  mod.rs  resolved.rs  value.rs
crates/tauri-utils/src/platform/: starting_binary.rs
crates/tauri/src/: async_runtime.rs  lib.rs  state.rs
crates/tauri/src/app/: plugin.rs
crates/tauri/src/event/: listener.rs
crates/tauri/src/ipc/: mod.rs  protocol.rs
crates/tauri/src/manager/: webview.rs
crates/tauri/src/menu/: icon.rs  mod.rs  plugin.rs  predefined.rs
crates/tauri/src/path/: android.rs
crates/tauri/src/protocol/: tauri.rs
crates/tauri/src/resources/: mod.rs
crates/tauri/src/test/: mock_runtime.rs  mod.rs
crates/tauri/src/tray/: mod.rs  plugin.rs
crates/tauri/src/webview/: plugin.rs
crates/tauri/src/window/: plugin.rs
crates/tests/restart/: LICENSE-APACHE-2.0
examples/api/src-tauri/: tauri.conf.json
examples/api/src-tauri/src/: lib.rs
examples/commands/: main.rs
examples/file-associations/src-tauri/: Cargo.toml
(+58 files in other folders)
